--- a/HTML1.html
+++ b/HTML1.html
@@ -18,7 +18,6 @@
 <div class="header" id="Header">
     <!--    badan-->
     <div class="ui button" onclick="showLoginMenu()">ورود/ثبت نام</div>
-<!--    <a href="#badan" class="Header-Link">ورود/ثبت نام</a>-->
     <ul id="Header-UnOrderedList">
         <li class="Header-UnOrderedList-Item" value="KireKhar">
             <a href="KireKhar" class="Header-UnOrderedList-Item">دسته بندی ها</a>
@@ -38,30 +37,35 @@
 
 <div class="ui modal" id="Login-Menu">
     <div class="header" id="Login-Menu-Header">
-        <div class="image content">
+        <div class="image content" id="logoImage">
             <img src="Pics/Licencia-Logo.png" alt="logoLicencia"/>
         </div>
-        <h3 id="welcomeHeader">Welcome TO Licencia</h3>
+        <h3 id="welcomeHeader">Welcome To Licencia</h3>
     </div>
     <div class="content">
         <div class="ui form">
             <!--            divider-->
             <div class="ui form">
-                <div class="ui paragraph">Email Address</div>
+                <div class="ui paragraph" id="paragraphInput1">Email Address</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="email address">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph">Password</div>
+                <div class="ui paragraph" id="paragraphInput2">Password</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="password">
                 </label>
             </div>
+            <div class="ui form">
+                <label>
+                    <input type="submit" id="loginButton" class="ui green button" value="login">
+                </label>
+            </div>
         </div>
     </div>
-    <footer class="div-div-loginFooter">
-        <p class="div-div-footer-p">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a> </p>
+    <footer class="loginFooter">
+        <p class="div-div-footer-p">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
     </footer>
 </div>
 
