--- a/HTML1.html
+++ b/HTML1.html
@@ -37,6 +37,10 @@
 
 <div class="ui modal" id="Login-Menu">
     <div class="header" id="Login-Menu-Header">
+        <div id="Signup-Login">
+            <div class="ui paragraph" id="loginText"><p id="loginTextP">ورود</p></div>
+            <div class="ui paragraph" id="signupText"><p id="signupTextP">ثبت نام</p></div>
+        </div>
         <div class="image content" id="logoImage">
             <img src="Pics/Licencia-Logo.png" alt="logoLicencia"/>
         </div>
