--- a/HTML1.html
+++ b/HTML1.html
@@ -38,8 +38,8 @@
 <div class="ui modal" id="Login-Menu">
     <div class="header" id="Login-Menu-Header">
         <div id="Signup-Login">
-            <div class="ui paragraph" id="loginText"><p id="loginTextP">ورود</p></div>
-            <div class="ui paragraph" id="signupText"><p id="signupTextP">ثبت نام</p></div>
+            <div class="signup-login-text" >ورود</div>
+            <div class="signup-login-text" onclick="showSignupMenu()">ثبت نام</div>
         </div>
         <div class="image content" id="logoImage">
             <img src="Pics/Licencia-Logo.png" alt="logoLicencia"/>
@@ -50,13 +50,13 @@
         <div class="ui form">
             <!--            divider-->
             <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput1">Email Address</div>
+                <div class="ui paragraph paragraphInput" >Email Address</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="email address">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput2">Password</div>
+                <div class="ui paragraph paragraphInput">Password</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="password">
                 </label>
@@ -72,6 +72,60 @@
         <p class="div-div-footer-p">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
     </footer>
 </div>
+<!--
+<div class="ui modal" id="signup-Menu">
+    <div class="header" id="Login-Menu-Header2">
+        <div id="Signup-Login2">
+            <div class="ui paragraph" id="loginText2" onclick="showLoginMenu()"><p id="loginTextP2">ورود</p></div>
+            <div class="ui paragraph" id="signupText2"><p id="signupTextP2">ثبت نام</p></div>
+        </div>
+        <h3 id="welcomeHeader2">signUp To Licencia</h3>
+    </div>
+    <div class="content">
+        <div class="ui form">
+            &lt;!&ndash;            divider&ndash;&gt;
+            <div class="ui form">
+                <div class="ui paragraph" id="paragraphInput3">نام کاربری</div>
+                <label>
+                    <input type="text" class="div-div-div-input" placeholder="email address">
+                </label>
+            </div>
+            <div class="ui form">
+                <div class="ui paragraph" id="paragraphInput4">نام و نام خانوادگی</div>
+                <label>
+                    <input type="text" class="div-div-div-input" placeholder="password">
+                </label>
+            </div>
+            <div class="ui form">
+                <div class="ui paragraph" id="paragraphInput5">ایمیل</div>
+                <label>
+                    <input type="text" class="div-div-div-input" placeholder="email address">
+                </label>
+            </div>
+            <div class="ui form">
+                <div class="ui paragraph" id="paragraphInput6">رمز عبور</div>
+                <label>
+                    <input type="text" class="div-div-div-input" placeholder="email address">
+                </label>
+            </div>
+            <div class="ui form">
+                <div class="ui paragraph" id="paragraphInput7">تکرار رمز عبور</div>
+                <label>
+                    <input type="text" class="div-div-div-input" placeholder="email address">
+                </label>
+            </div>
+            <div class="ui form">
+                <label>
+                    <input type="submit" id="signUpButton" class="ui green button" value="ثبت نام">
+                </label>
+            </div>
+        </div>
+    </div>
+    <footer class="loginFooter">
+        <p class="div-div-footer-p">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
+    </footer>
+</div>
+-->
 
 <script src="JS1.js"></script>
 </body>
