--- a/HTML1.html
+++ b/HTML1.html
@@ -41,8 +41,8 @@
             <div class="signup-login-text" >ورود</div>
             <div class="signup-login-text" onclick="showSignupMenu()">ثبت نام</div>
         </div>
-        <div class="image content" id="logoImage">
-            <img src="Pics/Licencia-Logo.png" alt="logoLicencia"/>
+        <div class="image content">
+            <img src="Pics/Licencia-Logo.png" id="logoImage" alt="logoLicencia"/>
         </div>
         <h3 id="welcomeHeader">Welcome To Licencia</h3>
     </div>
@@ -61,16 +61,16 @@
                     <input type="text" class="div-div-div-input" placeholder="password">
                 </label>
             </div>
-            <div class="ui form">
+            <div class="ui form" id="Login-Footer-Form">
                 <label>
                     <input type="submit" id="loginButton" class="ui green button" value="login">
                 </label>
+                <footer class="loginFooter">
+                    <p class="div-div-footer-p">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
+                </footer>
             </div>
         </div>
     </div>
-    <footer class="loginFooter">
-        <p class="div-div-footer-p">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
-    </footer>
 </div>
 <!--
 <div class="ui modal" id="signup-Menu">
