--- a/MainPage.html
+++ b/MainPage.html
@@ -17,7 +17,7 @@
 <body>
 <div class="header" id="Header">
     <!--    badan-->
-    <div class="ui button" onclick="showLoginMenu()">ورود/ثبت نام</div>
+    <div class="ui button" onclick="showLoginMenu()">ورود / ثبت نام</div>
     <ul id="Header-UnOrderedList">
         <li class="Header-UnOrderedList-Item" value="KireKhar">
             <a href="KireKhar" class="Header-UnOrderedList-Item">دسته بندی ها</a>
@@ -35,18 +35,18 @@
     <a href="#badan" class="Header-Link"><img src="Pics/Licencia-Logo.png" alt="Licencia" id="Logo"/></a>
 </div>
 
-<div class="ui modal" id="Login-Menu">
+<div class="ui modal" id="LogSin-Menu">
     <div class="header" id="Login-Menu-Header">
         <div id="Signup-Login">
-            <div class="signup-login-text" >ورود</div>
-            <div class="signup-login-text" onclick="showSignupMenu()">ثبت نام</div>
+            <div class="Signup-login-text" id="LoginMenuButton" onclick="showLogSinMenu(this, document.getElementById('SignUpMenuButton'), 'Login-Menu', 'SignUp-Menu')" >ورود</div>
+            <div class="Signup-login-text" id="SignUpMenuButton" onclick="showLogSinMenu(this, document.getElementById('LoginMenuButton'), 'Login-Menu', 'SignUp-Menu')">ثبت نام</div>
         </div>
         <div class="image content">
             <img src="Pics/Licencia-Logo.png" id="logoImage" alt="logoLicencia"/>
         </div>
         <h3 id="welcomeHeader">Welcome To Licencia</h3>
     </div>
-    <div class="content">
+    <div class="content transition visible" id="Login-Menu">
         <div class="ui form">
             <!--            divider-->
             <div class="ui form">
@@ -66,14 +66,53 @@
                     <input type="submit" id="loginButton" class="ui green button" value="login">
                 </label>
                 <footer class="loginFooter">
-                    <p class="div-div-footer-p">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
+                    <p class="div-div-footer-p" id="LoginMenu-SignUp-Link">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
                 </footer>
             </div>
         </div>
     </div>
+    <div class="content transition visible" id="SignUp-Menu">
+        <div class="ui form">
+            <!--            divider-->
+            <div class="ui form">
+                <div class="ui paragraph" id="paragraphInput3">نام کاربری</div>
+                <label>
+                    <input type="text" class="div-div-div-input" placeholder="email address">
+                </label>
+            </div>
+            <div class="ui form">
+                <div class="ui paragraph" id="paragraphInput4">نام و نام خانوادگی</div>
+                <label>
+                    <input type="text" class="div-div-div-input" placeholder="password">
+                </label>
+            </div>
+            <div class="ui form">
+                <div class="ui paragraph" id="paragraphInput5">ایمیل</div>
+                <label>
+                    <input type="text" class="div-div-div-input" placeholder="email address">
+                </label>
+            </div>
+            <div class="ui form">
+                <div class="ui paragraph" id="paragraphInput6">رمز عبور</div>
+                <label>
+                    <input type="text" class="div-div-div-input" placeholder="email address">
+                </label>
+            </div>
+            <div class="ui form">
+                <div class="ui paragraph" id="paragraphInput7">تکرار رمز عبور</div>
+                <label>
+                    <input type="text" class="div-div-div-input" placeholder="email address">
+                </label>
+            </div>
+            <div class="ui form">
+                <label>
+                    <input type="submit" id="signUpButton" class="ui green button" value="ثبت نام">
+                </label>
+            </div>
+        </div>
+    </div>
 </div>
-<!--
-<div class="ui modal" id="signup-Menu">
+<!--<div class="ui modal" id="SignUp-Menu">
     <div class="header" id="Login-Menu-Header2">
         <div id="Signup-Login2">
             <div class="ui paragraph" id="loginText2" onclick="showLoginMenu()"><p id="loginTextP2">ورود</p></div>
@@ -124,9 +163,8 @@
     <footer class="loginFooter">
         <p class="div-div-footer-p">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
     </footer>
-</div>
--->
+</div>-->
 
-<script src="JS1.js"></script>
+<script src="Js%20Functionals/JS1.js"></script>
 </body>
 </html>
