finish login - signup

--- a/MainPage.html
+++ b/MainPage.html
@@ -38,25 +38,25 @@
 <div class="ui modal" id="LogSin-Menu">
     <div class="header" id="Login-Menu-Header">
         <div id="Signup-Login">
-            <div class="Signup-login-text" id="LoginMenuButton" onclick="showLogSinMenu(this, document.getElementById('SignUpMenuButton'), 'Login-Menu', 'SignUp-Menu')" >ورود</div>
-            <div class="Signup-login-text" id="SignUpMenuButton" onclick="showLogSinMenu(this, document.getElementById('LoginMenuButton'), 'Login-Menu', 'SignUp-Menu')">ثبت نام</div>
+            <div class="Signup-login-text" id="LoginMenuButton" onclick="loginMenu()">ورود</div>
+            <div class="Signup-login-text" id="SignUpMenuButton" onclick="signUpMenu()">ثبت نام</div>
         </div>
         <div class="image content">
             <img src="Pics/Licencia-Logo.png" id="logoImage" alt="logoLicencia"/>
         </div>
         <h3 id="welcomeHeader">Welcome To Licencia</h3>
     </div>
-    <div class="content transition visible" id="Login-Menu">
+    <div class="content" id="Login-Menu">
         <div class="ui form">
             <!--            divider-->
             <div class="ui form">
-                <div class="ui paragraph paragraphInput" >Email Address</div>
+                <div class="ui paragraph paragraphInput" >ایمیل</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="email address">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph paragraphInput">Password</div>
+                <div class="ui paragraph paragraphInput">رمز عبور</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="password">
                 </label>
@@ -71,35 +71,35 @@
             </div>
         </div>
     </div>
-    <div class="content transition visible" id="SignUp-Menu">
+    <div class="content" id="SignUp-Menu">
         <div class="ui form">
             <!--            divider-->
             <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput3">نام کاربری</div>
+                <div class="ui paragraph paragraphInput" >نام کاربری</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="email address">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput4">نام و نام خانوادگی</div>
+                <div class="ui paragraph paragraphInput" >نام و نام خانوادگی</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="password">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput5">ایمیل</div>
+                <div class="ui paragraph paragraphInput" >ایمیل</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="email address">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput6">رمز عبور</div>
+                <div class="ui paragraph paragraphInput">رمز عبور</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="email address">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput7">تکرار رمز عبور</div>
+                <div class="ui paragraph paragraphInput">تکرار رمز عبور</div>
                 <label>
                     <input type="text" class="div-div-div-input" placeholder="email address">
                 </label>
@@ -112,58 +112,6 @@
         </div>
     </div>
 </div>
-<!--<div class="ui modal" id="SignUp-Menu">
-    <div class="header" id="Login-Menu-Header2">
-        <div id="Signup-Login2">
-            <div class="ui paragraph" id="loginText2" onclick="showLoginMenu()"><p id="loginTextP2">ورود</p></div>
-            <div class="ui paragraph" id="signupText2"><p id="signupTextP2">ثبت نام</p></div>
-        </div>
-        <h3 id="welcomeHeader2">signUp To Licencia</h3>
-    </div>
-    <div class="content">
-        <div class="ui form">
-            &lt;!&ndash;            divider&ndash;&gt;
-            <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput3">نام کاربری</div>
-                <label>
-                    <input type="text" class="div-div-div-input" placeholder="email address">
-                </label>
-            </div>
-            <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput4">نام و نام خانوادگی</div>
-                <label>
-                    <input type="text" class="div-div-div-input" placeholder="password">
-                </label>
-            </div>
-            <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput5">ایمیل</div>
-                <label>
-                    <input type="text" class="div-div-div-input" placeholder="email address">
-                </label>
-            </div>
-            <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput6">رمز عبور</div>
-                <label>
-                    <input type="text" class="div-div-div-input" placeholder="email address">
-                </label>
-            </div>
-            <div class="ui form">
-                <div class="ui paragraph" id="paragraphInput7">تکرار رمز عبور</div>
-                <label>
-                    <input type="text" class="div-div-div-input" placeholder="email address">
-                </label>
-            </div>
-            <div class="ui form">
-                <label>
-                    <input type="submit" id="signUpButton" class="ui green button" value="ثبت نام">
-                </label>
-            </div>
-        </div>
-    </div>
-    <footer class="loginFooter">
-        <p class="div-div-footer-p">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
-    </footer>
-</div>-->
 
 <script src="Js%20Functionals/JS1.js"></script>
 </body>
