--- a/MainPage.html
+++ b/MainPage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="CSS Designs/loginSignupInput.css"/>
     <link rel="stylesheet" type="text/css" href="CSS%20Designs/Header.css"/>
     <link rel="stylesheet" type="text/css" href="CSS%20Designs/LoginMenu.css"/>
 
@@ -46,27 +47,37 @@
         </div>
         <h3 id="welcomeHeader">Welcome To Licencia</h3>
     </div>
+
+    <script>
+        const userNameMaxLength = 30;
+        const passwordMaxLength = 30;
+        const emailMaxLength = 50;
+        const firstNameMaxLength = 30;
+        const lastNameMaxLength = 40;
+    </script>
+
     <div class="content Login-SignUp-Menu" id="Login-Menu">
         <div class="ui form">
             <!--            divider-->
             <div class="ui form">
-                <div class="ui paragraph paragraphInput" >نام کاربری یا ایمیل</div>
+                <div class="ui paragraph paragraphInput">نام کاربری یا ایمیل</div>
                 <label>
-                    <input type="text" class="div-div-div-input" id="login-KeyPoint" placeholder="Username Or Email">
+                    <input maxlength="50" type="text" class="div-div-div-input" id="login-KeyPoint" placeholder="Username Or Email">
                 </label>
             </div>
             <div class="ui form">
                 <div class="ui paragraph paragraphInput">رمز عبور</div>
                 <label>
-                    <input type="text" class="div-div-div-input" id="login-Password" placeholder="Password">
+                    <input maxlength="30" type="text" class="div-div-div-input" id="login-Password" placeholder="Password">
                 </label>
             </div>
-            <div class="ui form" id="Login-Footer-Form" onsubmit="login()">
+            <div class="ui form" id="Login-Footer-Form" >
                 <label>
-                    <input type="submit" id="loginButton" class="ui green button" value="login">
+                    <input onclick="login()" type="submit" id="loginButton" class="ui green button" value="login">
                 </label>
                 <footer class="loginFooter">
-                    <p class="div-div-footer-p" id="LoginMenu-SignUp-Link">آیا حساب ندارید؟<a class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
+                    <p class="div-div-footer-p" id="LoginMenu-SignUp-Link">آیا حساب ندارید؟<a
+                            class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
                 </footer>
             </div>
         </div>
@@ -75,57 +86,59 @@
         <div class="ui form">
             <!--            divider-->
             <div class="ui form">
-                <div class="ui paragraph paragraphInput" >نام کاربری</div>
+                <div class="ui paragraph paragraphInput">نام کاربری</div>
                 <label>
-                    <input type="text" class="div-div-div-input" id="SignUp-UserName" placeholder="username">
+                    <input maxlength="30" type="text" class="div-div-div-input" id="SignUp-UserName" placeholder="username">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph paragraphInput" >نام</div>
+                <div class="ui paragraph paragraphInput">نام</div>
                 <label>
-                    <input type="text" class="div-div-div-input" id="SignUp-FirstName" placeholder="FirstName">
+                    <input maxlength="30" maxlength="30" type="text" class="div-div-div-input" id="SignUp-FirstName"
+                           placeholder="FirstName">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph paragraphInput" >نام خانوادگی</div>
+                <div class="ui paragraph paragraphInput">نام خانوادگی</div>
                 <label>
-                    <input type="text" class="div-div-div-input" id="SignUp-LastName" placeholder="LastName">
+                    <input maxlength="30" type="text" class="div-div-div-input" id="SignUp-LastName" placeholder="LastName">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph paragraphInput" >ایمیل</div>
+                <div class="ui paragraph paragraphInput">ایمیل</div>
                 <label>
-                    <input type="text" class="div-div-div-input" id="SignUp-Email" placeholder="Email Address">
+                    <input maxlength="50" type="text" class="div-div-div-input" id="SignUp-Email" placeholder="Email Address">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph paragraphInput" >رمز عبور</div>
+                <div class="ui paragraph paragraphInput">رمز عبور</div>
                 <label>
-                    <input type="password" class="div-div-div-input" id="SignUp-Password" placeholder="Password">
+                    <input maxlength="30" type="password" class="div-div-div-input" id="SignUp-Password" placeholder="Password">
                 </label>
             </div>
             <div class="ui form">
-                <div class="ui paragraph paragraphInput" >تکرار رمز عبور</div>
+                <div class="ui paragraph paragraphInput">تکرار رمز عبور</div>
                 <label>
-                    <input type="password" class="div-div-div-input" id="SignUp-RepeatPassword" placeholder="Repeat Password">
+                    <input maxlength="30" type="password" class="div-div-div-input" id="SignUp-RepeatPassword"
+                           placeholder="Repeat Password">
                 </label>
             </div>
             <div class="ui form">
                 <label>کارفرما</label>
-                <div class="ui toggle checkbox" >
+                <div class="ui toggle checkbox">
                     <input type="checkbox" id="isFreeLancer-ToggleButton" name="public">
                     <label></label>
                 </div>
                 <label>فریلنسر</label>
             </div>
-            <div class="ui form" onsubmit="signUp()">
+            <div class="ui form">
                 <label>
-                    <input type="submit" id="signUpButton" class="ui green button" value="ثبت نام">
+                    <input onclick="signUp()" type="submit" id="signUpButton" class="ui green button" value="ثبت نام">
                 </label>
             </div>
         </div>
     </div>
-    <script src="Js%20Functionals/Login%20SignUp%20Show.js"></script>
+    <script src="Js%20Functionals/Login%20SignUp%20Method.js"></script>
 </div>
 
 <script src="Js%20Functionals/Login%20SignUp%20Show.js"></script>
