--- a/HTMLS/MainPage.html
+++ b/HTMLS/MainPage.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="CSS Designs/loginSignupInput.css"/>
-    <link rel="stylesheet" type="text/css" href="CSS%20Designs/Header.css"/>
-    <link rel="stylesheet" type="text/css" href="CSS%20Designs/LoginMenu.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS%20Designs/loginSignupInput.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS%20Designs/Header.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS%20Designs/LoginMenu.css"/>
 
     <meta charset="UTF-8">
     <title>Crazy Sons Of Bitches</title>
 
-    <link rel="stylesheet" type="text/css" href="Semantic-UI-CSS-master/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="../Semantic-UI-CSS-master/semantic.min.css">
+
     <script
             src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
-    <script src="Semantic-UI-CSS-master/semantic.min.js"></script>
+    <script src="../Semantic-UI-CSS-master/semantic.min.js"></script>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 </head>
 <body>
 <div class="header" id="Header">
@@ -33,7 +37,7 @@
             <a href="KireKhar" class="Header-UnOrderedList-Item">دنبال شونده ها</a>
         </li>
     </ul>
-    <a href="#badan" class="Header-Link"><img src="Pics/Licencia-Logo.png" alt="Licencia" id="Logo"/></a>
+    <a href="#badan" class="Header-Link"><img src="../Pics/Licencia-Logo.png" alt="Licencia" id="Logo"/></a>
 </div>
 
 <div class="ui modal" id="LogSin-Menu">
@@ -43,18 +47,10 @@
             <div class="Signup-login-text" id="SignUpMenuButton" onclick="signUpMenu()">ثبت نام</div>
         </div>
         <div class="image content">
-            <img src="Pics/Licencia-Logo.png" id="logoImage" alt="logoLicencia"/>
+            <img src="../Pics/Licencia-Logo.png" id="logoImage" alt="logoLicencia"/>
         </div>
         <h3 id="welcomeHeader">Welcome To Licencia</h3>
     </div>
-
-    <script>
-        const userNameMaxLength = 30;
-        const passwordMaxLength = 30;
-        const emailMaxLength = 50;
-        const firstNameMaxLength = 30;
-        const lastNameMaxLength = 40;
-    </script>
 
     <div class="content Login-SignUp-Menu" id="Login-Menu">
         <div class="ui form">
@@ -94,7 +90,7 @@
             <div class="ui form">
                 <div class="ui paragraph paragraphInput">نام</div>
                 <label>
-                    <input maxlength="30" maxlength="30" type="text" class="div-div-div-input" id="SignUp-FirstName"
+                    <input maxlength="30" type="text" class="div-div-div-input" id="SignUp-FirstName"
                            placeholder="FirstName">
                 </label>
             </div>
@@ -125,7 +121,7 @@
             </div>
             <div class="ui form">
                 <label>فریلنسر</label>
-                <div class="ui toggle checkbox">
+                <div class="ui toggle checkbox" id="isFreeLancer-ToggleDiv">
                     <input type="checkbox" id="isFreeLancer-ToggleButton" name="public">
                     <label></label>
                 </div>
@@ -138,9 +134,9 @@
             </div>
         </div>
     </div>
-    <script src="Js%20Functionals/Login%20SignUp%20Method.js"></script>
+    <script src="../Js%20Functionals/Login%20SignUp%20Method.js"></script>
 </div>
 
-<script src="Js%20Functionals/Login%20SignUp%20Show.js"></script>
+<script src="../Js%20Functionals/Login%20SignUp%20Show.js"></script>
 </body>
 </html>
