Fixing Is FreeLancer CheckBox Issue

--- a/HTMLS/MainPage.html
+++ b/HTMLS/MainPage.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="../CSS%20Designs/loginSignupInput.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS%20Designs/MainPage/loginSignupInput.css"/>
     <link rel="stylesheet" type="text/css" href="../CSS%20Designs/Header.css"/>
-    <link rel="stylesheet" type="text/css" href="../CSS%20Designs/LoginMenu.css"/>
-    <link rel="stylesheet" type="text/css" href="../CSS%20Designs/content1.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS%20Designs/MainPage/LoginMenu.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS%20Designs/MainPage/content1.css"/>
 
     <meta charset="UTF-8">
     <title>Crazy Sons Of Bitches</title>
 
     <link rel="stylesheet" type="text/css" href="../Semantic-UI-CSS-master/semantic.min.css">
+
+    <script src="../Js%20Functionals/FileNames.js"></script>
 
     <script
             src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -76,7 +78,7 @@
                 </label>
                 <footer class="loginFooter">
                     <p class="div-div-footer-p" id="LoginMenu-SignUp-Link">آیا حساب ندارید؟<a
-                            class="div-div-footer-signupLink" href="#signup">ثبت نام</a></p>
+                            class="div-div-footer-signupLink" href="javascript:signUpMenu()">ثبت نام</a></p>
                 </footer>
             </div>
         </div>
@@ -141,7 +143,7 @@
             </div>
         </div>
     </div>
-    <script src="../Js%20Functionals/Login%20SignUp%20Method.js"></script>
+    <script src="../Js%20Functionals/MainPage/Login%20SignUp%20Method.js"></script>
 </div>
 <div class="content div-content" id="div-content1">
     <div class="image content codingPersonImageDiv">
@@ -164,6 +166,6 @@
     </div>
 </div>
 
-<script src="../Js%20Functionals/Login%20SignUp%20Show.js"></script>
+<script src="../Js%20Functionals/MainPage/Login%20SignUp%20Show.js"></script>
 </body>
 </html>
