--- a/HTMLS/MainPage.html
+++ b/HTMLS/MainPage.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../CSS%20Designs/Header.css"/>
     <link rel="stylesheet" type="text/css" href="../CSS%20Designs/MainPage/LoginMenu.css"/>
     <link rel="stylesheet" type="text/css" href="../CSS%20Designs/MainPage/content1.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS%20Designs/basic.css"/>
 
     <meta charset="UTF-8">
     <title>Crazy Sons Of Bitches</title>
@@ -157,7 +158,7 @@
 </div>
 
 <div class="content div-content">
-    <div class="image content codingPersonImageDiv" >
+    <div class="image content codingPersonImageDiv">
         <img src="../Pics/codingPerson.jpg" alt="a person is coding"/>
     </div>
     <div class="ui paragraph content-paragraphHeader">
